--- a/3qest/index.html
+++ b/3qest/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/libs/fontawesome-free-5.12.1-web/css/all.min.css">
+    <link rel="stylesheet" type="text/css" href="css/effect.css">
 </head>
 <body>
     <div class="wrapper">
@@ -74,80 +75,55 @@ to be used for different projects.</p>
             <div class="p_portfolio">
                 <p class="portfolio"> Contact me if you like my work</p>
             </div>
-            <div class="boxflex">
-               <div class="hover_color">
-                   <div class="img1 img">
-                       <div class="wrapper_icon">
-                           <div class="icon">
+            <section class="conteiner5">
+                <div class="center">
+                    <div class="galery">
+                        <div class="pic">
+                            <img src="css/imgCSS/portfolio1.png" alt="pic" class="pic_img">
+                            <span class="pic-caption bottom-to-top">
                                 <i class="fas fa-search-plus"></i>
-                           </div>
-                           <div class="icon2">
-                               <i class="fas fa-link"></i>
-                           </div>
-                       </div>
-                   </div>
-               </div>
-               <div class="hover_color">
-                   <div class="img2 img">
-                       <div class="wrapper_icon">
-                           <div class="icon">
-                               <i class="fas fa-search-plus"></i>
-                           </div>
-                           <div class="icon2">
-                               <i class="fas fa-link"></i>
-                           </div>
-                       </div>
-                   </div>
-               </div>
-               <div class="hover_color">
-                   <div class="img3 img">
-                       <div class="wrapper_icon">
-                           <div class="icon">
-                               <i class="fas fa-search-plus"></i>
-                           </div>
-                           <div class="icon2">
-                               <i class="fas fa-link"></i>
-                           </div>
-                       </div>
-                   </div>
-               </div>
-               <div class="hover_color">
-                   <div class="img4 img">
-                       <div class="wrapper_icon">
-                           <div class="icon">
-                               <i class="fas fa-search-plus"></i>
-                           </div>
-                           <div class="icon2">
-                                  <i class="fas fa-link"></i>
-                           </div>
-                       </div>
-                   </div>
-               </div>
-               <div class="hover_color">
-                   <div class="img5 img">
-                       <div class="wrapper_icon">
-                           <div class="icon">
-                               <i class="fas fa-search-plus"></i>
-                            </div>
-                           <div class="icon2">
-                               <i class="fas fa-link"></i>
-                           </div>
-                       </div>
-                   </div>
-               </div>
-               <div class="hover_color">
-                   <div class="img6 img">
-                       <div class="wrapper_icon">
-                           <div class="icon">
-                               <i class="fas fa-search-plus"></i>
-                            </div>
-                           <div class="icon2">
-                               <i class="fas fa-link"></i>
-                           </div>
-                       </div>
-                   </div>
-               </div>
-            </div>
+                                <i class="fas fa-link"></i>
+                            </span>
+                        </div>
+                        <div class="pic">
+                            <img src="css/imgCSS/portfolio2.png" alt="pic">
+                            <span class="pic-caption bottom-to-top">
+                                <i class="fas fa-search-plus"></i>
+                                <i class="fas fa-link"></i>
+                            </span>
+                        </div>
+                        <div class="pic">
+                            <img src="css/imgCSS/portfolio3.png" alt="pic">
+                            <span class="pic-caption bottom-to-top">
+                                <i class="fas fa-search-plus"></i>
+                                <i class="fas fa-link"></i>
+                            </span>
+                        </div>
+                        <div class="pic">
+                            <img src="css/imgCSS/portfolio4.png" alt="pic">
+                            <span class="pic-caption bottom-to-top">
+                                <i class="fas fa-search-plus"></i>
+                                <i class="fas fa-link"></i>
+                            </span>
+                        </div>
+                        <div class="pic">
+                            <img src="css/imgCSS/portfolio5.png" alt="pic">
+                            <span class="pic-caption bottom-to-top">
+                                <i class="fas fa-search-plus"></i>
+                                <i class="fas fa-link"></i>
+                            </span>
+                        </div>
+                        <div class="pic">
+                            <img src="css/imgCSS/portfolio6.png" alt="pic">
+                            <span class="pic-caption bottom-to-top">
+                                <i class="fas fa-search-plus"></i>
+                                <i class="fas fa-link"></i>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
        </div>
 
 
